--- a/WebContent/mz/search/_catalogueList.xhtml
+++ b/WebContent/mz/search/_catalogueList.xhtml
@@ -9,7 +9,8 @@
 	xmlns:a="http://richfaces.org/a4j">
 
 	<rich:dataTable id="resultList" value="#{searchManager.results}"
-		var="_dto" first="#{searchManager.pagination ? listManager.first : 0}" rows="#{searchManager.pagination ? listManager.pageSize : 0}"
+		var="_dto" first="#{searchManager.pagination ? listManager.first : 0}"
+		rows="#{searchManager.pagination ? listManager.pageSize : 0}"
 		rowClass="#{_dto.formation.visible} #{_dto.formation.plbInter ? 'plb' : ''}">
 		<rich:column id="reference" styleClass="#{_dto.formation.type}"
 			sortOrder="#{searchManager.getOrder('reference')}"
@@ -27,14 +28,15 @@
 				</a:outputPanel>
 			</f:facet>
 			<h:outputLink rendered="#{_dto.formation.urlPlb != null}"
-				styleClass="#{_dto.formation.type}" value="#{WEB_URL}#{_dto.formation.urlPlb}"
-				target="_blank">#{_dto.formation.reference}</h:outputLink>
+				styleClass="#{_dto.formation.type}"
+				value="#{WEB_URL}#{_dto.formation.urlPlb}" target="_blank">#{_dto.formation.reference}</h:outputLink>
 			<h:outputText rendered="#{_dto.formation.urlPlb == null}"
 				styleClass="#{_dto.formation.type}"
 				value="#{_dto.formation.reference}" />
 
 		</rich:column>
-		<rich:column id="libelle" sortOrder="#{searchManager.getOrder('libelle')}"
+		<rich:column id="libelle"
+			sortOrder="#{searchManager.getOrder('libelle')}"
 			sortBy="#{_dto.formation.libelle}">
 			<f:facet name="header">
 				<a:commandLink value="#{messages['formation.libelle']}"
@@ -104,17 +106,20 @@
 					render="resultList" action="#{searchManager.sortBy('tarifIntra')}">
 					<s:conversationId />
 				</a:commandLink>
-				<a:outputPanel rendered="#{searchManager.isAscending('tarifIntraOrder')}">
+				<a:outputPanel
+					rendered="#{searchManager.isAscending('tarifIntraOrder')}">
 					<img src="#{request.contextPath}/img/sort_down.png" width="10" />
 				</a:outputPanel>
-				<a:outputPanel rendered="#{searchManager.isDescending('tarifIntra')}">
+				<a:outputPanel
+					rendered="#{searchManager.isDescending('tarifIntra')}">
 					<img src="#{request.contextPath}/img/sort_up.png" width="10" />
 				</a:outputPanel>
 			</f:facet>
 			<h:outputText value="#{_dto.formation.libreIntra}" />
 		</rich:column>
-		<rich:column rendered="#{sessionDataManager.managerIntervenantsManager}" id="categorie"
-			sortBy="#{_dto.formation.categorie.libelle}"
+		<rich:column
+			rendered="#{sessionDataManager.managerIntervenantsManager}"
+			id="categorie" sortBy="#{_dto.formation.categorie.libelle}"
 			sortOrder="#{searchManager.getOrder('categorie')}">
 			<f:facet name="header">
 				<a:commandLink value="#{messages['formation.categorie']}"
@@ -126,10 +131,13 @@
 					<img src="#{request.contextPath}/img/sort_up.png" width="10" />
 				</a:outputPanel>
 			</f:facet>
-			<h:outputText escape="false"
-				value="#{_dto.formation.categorie.libelle}" />
+			<b> <h:outputText escape="false"
+					value="#{_dto.formation.categorie.filiere.libelle} -> #{_dto.formation.categorie.libelle}" />
+			</b>
 		</rich:column>
-		<rich:column rendered="#{sessionDataManager.managerIntervenantsManager}" id="filieres">
+		<rich:column
+			rendered="#{sessionDataManager.managerIntervenantsManager}"
+			id="filieres">
 			<f:facet name="header">
 				<h:outputText value="#{messages['formation.filieres']}" />
 			</f:facet>
@@ -140,7 +148,9 @@
 			<f:facet name="header">
 				<h:outputText value="#{messages['formation.partenaires']}" />
 			</f:facet>
-			<a:repeat value="#{applicationManager.getFormationsPartenaire(_dto.formation)}" var="fp">
+			<a:repeat
+				value="#{applicationManager.getFormationsPartenaire(_dto.formation)}"
+				var="fp">
 				<h:outputLink rendered="#{fp.url != null}" value="#{fp.url}"
 					target="_blank">#{fp.partenaire.nom}</h:outputLink>
 				<h:outputText rendered="#{fp.url == null}"
@@ -152,14 +162,18 @@
 			<f:facet name="header">
 				<h:outputText value="#{messages['formation.sessions.next']}" />
 			</f:facet>
-			<a:repeat value="#{applicationManager.getFormationsNextSessions(_dto.formation)}" var="so">
+			<a:repeat
+				value="#{applicationManager.getFormationsNextSessions(_dto.formation)}"
+				var="so">
 				<b><h:outputText value="#{so.session.debut}">
 						<s:convertDateTime type="date" dateStyle="short" />
 					</h:outputText></b> #{so.organismes};				
 					</a:repeat>
 
 		</rich:column>
-		<rich:column rendered="#{sessionDataManager.managerIntervenantsManager}" id="origine">
+		<rich:column
+			rendered="#{sessionDataManager.managerIntervenantsManager}"
+			id="origine">
 			<f:facet name="header">
 				<h:outputText value="#{messages['formation.origine']}" />
 			</f:facet>
@@ -187,7 +201,9 @@
 			<f:facet name="header">
 				<h:outputText value="#{messages['formation.mutualisees']}" />
 			</f:facet>
-			<a:repeat value="#{applicationManager.getSameFormations(_dto.formation)}" var="f">
+			<a:repeat
+				value="#{applicationManager.getSameFormations(_dto.formation)}"
+				var="f">
 				<s:link view="/mz/formation/formation.xhtml"
 					action="#{formationManager.select}">
 					<f:param name="formationId" value="#{f.idFormation}" />
@@ -204,8 +220,9 @@
 			<h:outputText escape="false" value="#{_dto.formation.shortRemarques}" />
 		</rich:column>
 		<f:facet name="footer">
-<!-- 			<rich:dataScroller id="ds2" renderIfSinglePage="false" page="#{searchManager.pagination ? listManager.currentPage :  0}" fastStep="5"/> -->
-			<rich:dataScroller id="ds2" renderIfSinglePage="false" page="#{listManager.currentPage}" fastStep="5"/>
+			<!-- 			<rich:dataScroller id="ds2" renderIfSinglePage="false" page="#{searchManager.pagination ? listManager.currentPage :  0}" fastStep="5"/> -->
+			<rich:dataScroller id="ds2" renderIfSinglePage="false"
+				page="#{listManager.currentPage}" fastStep="5" />
 		</f:facet>
 	</rich:dataTable>
 </ui:composition>
