--- a/WebContent/mz/formation/edit.xhtml
+++ b/WebContent/mz/formation/edit.xhtml
@@ -151,7 +151,7 @@
 							#{fFormation.libelle}				
 					</rich:column>
 			</rich:dataTable>
-<br/>
+			<br />
 			<a:commandButton value="Ajouter à une catégorie secondaire"
 				id="addFButton" render="formationFiliereContent"
 				action="#{formationManager.addNewFormationFiliere}"
@@ -173,7 +173,10 @@
 					<f:facet name="header">
 						#{messages['formation.filiere']}
 						</f:facet>
-					<a:outputPanel>#{fFiliere.libelle}</a:outputPanel>
+					<a:outputPanel rendered="#{fFiliere.principale}">
+						<b>#{fFiliere.libelle}</b>
+					</a:outputPanel>
+					<a:outputPanel rendered="#{!fFiliere.principale}">#{fFiliere.libelle}</a:outputPanel>
 				</rich:column>
 				<rich:column>
 					<f:facet name="header">
@@ -194,6 +197,13 @@
 						action="#{formationManager.setNewFormationFiliere(fFiliere)}"
 						oncomplete="#{rich:component('formationFilierePopup')}.show();"
 						immediate="true">
+					</a:commandButton>
+					&#160;
+					<a:commandButton value="Rendre principale (Affichage filière web)"
+						rendered="#{fFiliere.isPrincipale.equals('non')}"
+						render="formationFiliereList"
+						action="#{formationManager.setPrincipale(fFiliere)}">
+						<s:conversationId />
 					</a:commandButton>
 				</rich:column>
 			</rich:dataTable>
