Restoring old display of list

--- a/WebContent/mz/search/_catalogueList.xhtml
+++ b/WebContent/mz/search/_catalogueList.xhtml
@@ -132,7 +132,7 @@
 				</a:outputPanel>
 			</f:facet>
 			<b> <h:outputText escape="false"
-					value="#{_dto.formation.categorie.filiere.libelle} -> #{_dto.formation.categorie.libelle}" />
+					value="#{_dto.formation.categorie.libelle}" />
 			</b>
 		</rich:column>
 		<rich:column
