Adding kibana links

--- a/WebContent/mz/formation/_tools.xhtml
+++ b/WebContent/mz/formation/_tools.xhtml
@@ -53,4 +53,6 @@
 			</rich:column>
 		</rich:dataTable>
 	</rich:collapsiblePanel>
+<br/>
+	<a href="#{formationManager.kibanaLink}" target="_blank" class="large">Voir les dernières inscriptions</a>
 </ui:composition>
