--- a/WebContent/mz/search/_tools.xhtml
+++ b/WebContent/mz/search/_tools.xhtml
@@ -23,4 +23,9 @@
 <br/>		
 		<s:button action="#{searchManager.exportAdWords}" 
 			rendered="#{sessionDataManager.managerIntervenantsManager and !empty searchManager.results}" value="Export AdWords" />
+<br/>	
+		<a:outputPanel id="kibanaPanel">
+			<a href="#{searchManager.kibanaLink}" target="_blank" class="large">Voir les dernières inscriptions</a>
+		</a:outputPanel>	
+		
 </ui:composition>
